<resources>

    <string name="app_name">Convert X</string>
    <string name="eg_input">Enter a number</string>
    <string name="txt_default">X</string>
    <string name="txt_To">To</string>

    <!--Tab titles-->
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="vol">Volume</string>
    <string name="time">Time</string>
    <string name="temp">Temperature</string>
    <string name="weight">Weight</string>

    <!--Length -->
    <string name="btn_cm">cm</string>
    <string name="btn_m">m</string>
    <string name="btn_mm">mm</string>
    <string name="btn_km">km</string>
    <string name="btn_μm">μm</string>
    <string name="btn_nm">nm</string>
    <string name="btn_ft">ft</string>
    <string name="btn_inch">in</string>


    <!--Weight -->
    <string name="button_gram">gram</string>
    <string name="button_kg">kg</string>
    <string name="button_mg">mg</string>
    <string name="button_ton">ton</string>
    <string name="button_pound">pound</string>
    <string name="button_carat">carat</string>
    <string name="button_weight_default">gram</string>


    <!--Time -->
    <string name="button_sec">sec</string>
    <string name="button_min">min</string>
    <string name="button_hour">hour</string>
    <string name="button_day">day</string>
    <string name="button_week">week</string>
    <string name="button_month">month</string>
    <string name="button_year">year</string>
    <string name="button_time_default">sec</string>

    <!--temp-->
    <string name="button_deg">°C</string>
    <string name="button_far">°F</string>
    <string name="button_kel">°K</string>
    <string name="button_temp_default">°C</string>

    <!--Area-->
    <string name="btn_cm_sqr">cm<sup><small>2</small></sup></string>
    <string name="btn_m_sqr"> m<sup><small>2</small></sup></string>
    <string name="btn_mm_sqr">mm<sup><small>2</small></sup></string>
    <string name="btn_km_sqr">km<sup><small>2</small></sup></string>
    <string name="btn_μm_sqr">μm<sup><small>2</small></sup></string>
    <string name="btn_ft_sqr">ft<sup><small>2</small></sup></string>
    <string name="btn_inch_sqr">in<sup><small>2</small></sup></string>
    <string name="btn_acre">acre</string>

    <!--Volume-->
    <string name="button_cubic_cm">cm<sup><small>3</small></sup></string>
    <string name="button_cubic_meter">m<sup><small>3</small></sup></string>
    <string name="button_cubic_mm">mm<sup><small>3</small></sup></string>
    <string name="button_liter">liter</string>
    <string name="button_ml">ml</string>
    <string name="button_gallon">gallon</string>
    <string name="button_volume_default">liter</string>




</resources>
