<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apptreak.convertx.MainActivity">

    <EditText
        android:id="@+id/txtInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/eg_input"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInput"
        android:id="@+id/inputUnitsScroll"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_m"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnMm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_km"
                android:textAllCaps="false" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:text="@string/txt_To"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputUnitsScroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:id="@+id/txtTo" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTo"
        android:id="@+id/outputUnitsScroll"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCmOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnMOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_m"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnMmOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnKmOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_km"
                android:textAllCaps="false" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:text="@string/txt_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outputUnitsScroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:id="@+id/textView2" />


</RelativeLayout>
