<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tempLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <EditText
        android:id="@+id/tempInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/input_margin_top"
        android:ems="10"
        android:backgroundTint="@android:color/transparent"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorPrimaryText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/eg_input"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/txtTo"
        android:layout_width="@dimen/txtTo_width"
        android:layout_height="@dimen/txtTo_height"
        android:scaleType="centerCrop"
        android:layout_below="@+id/inputUnits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_txtTo"
        android:src="@drawable/arrow4"
        android:text="@string/txt_To" />

    <LinearLayout
        android:id="@+id/outputUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTo"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_top_outputUnitsScroll"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btndegOp"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ripple"
            android:text="@string/button_deg"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnfarOp"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ripple"
            android:text="@string/button_far"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnkelOp"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ripple"
            android:text="@string/button_kel"
            android:textAllCaps="false" />

    </LinearLayout>


    <TextView
        android:id="@+id/tempOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outputUnits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_output"
        android:freezesText="true"
        android:text="@string/txt_default"
        android:textSize="@dimen/text_size" />


    <LinearLayout
        android:id="@+id/inputUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempInput"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_top_temp_input_unit"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btndeg"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ripple"
            android:text="@string/button_deg"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnfar"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ripple"
            android:text="@string/button_far"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnkel"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/ripple"
            android:text="@string/button_kel"
            android:textAllCaps="false" />


    </LinearLayout>

    <TextView
        android:id="@+id/tempUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputUnits"
        android:layout_alignTop="@+id/tempInput"
        android:layout_toEndOf="@+id/tempInput"
        android:layout_toRightOf="@+id/tempInput"
        android:freezesText="true"
        android:text="@string/button_temp_default"
        android:textSize="@dimen/text_size" />


</RelativeLayout>