<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lengthLayout">

    <EditText
        android:id="@+id/txtInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/eg_input"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <HorizontalScrollView
        android:id="@+id/inputUnitsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInput"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_m"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnMm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_km"
                android:textAllCaps="false" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputUnitsScroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/txt_To"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:id="@+id/outputUnitsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTo"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCmOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnMOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_m"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnMmOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnKmOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_km"
                android:textAllCaps="false" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/txtOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outputUnitsScroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/txt_default"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputUnit"
        android:text="@string/btn_cm"
        android:textSize="30sp"
        android:layout_alignBaseline="@+id/txtInput"
        android:layout_alignBottom="@+id/txtInput"
        android:layout_toRightOf="@+id/txtTo"
        android:layout_toEndOf="@+id/txtTo"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp" />
</RelativeLayout>